corr showing up on plot

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <iframe src='d3.html' height="500" width="700" seamless></iframe>
+                <iframe src='d3.html' height="500" width="700"></iframe>
             </div>
             <div class="col-md-6" id="paragraph">
                 <p> The study was conducted to analyze different sets of demographic data with behavioral risks.
